# password-manager

./: README.md  package.json  pnpm-lock.yaml
src/: App.tsx  bindings.ts
src-tauri/: Cargo.toml  database.db  diesel.toml  justfile  tauri.conf.json
src-tauri/macro_utils/: Cargo.toml
src-tauri/macro_utils/src/: lib.rs
src-tauri/migrations/2025-10-25-183758-0000_create_items/: up.sql
src-tauri/src/: commands.rs  db_models.rs  encrypt.rs  lib.rs  migrations.rs  schema.rs  services.rs
src-tauri/src/common/: id.rs  mod.rs
src-tauri/src/encrypt/: test.rs
src/types/: users.ts
