[package]
name = "password_manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "password_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = "0.10.1"
base64 = "0.22.1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "r2d2"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
macro_utils = { path = "macro_utils" }
specta = "=2.0.0-rc.22"
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
# specta = { version = "=2.0.0-rc.21", features = ["derive"] }
# specta-typescript = "0.0.9"
rand = "0.8.5" # Required for the gen_id macro from macro_utils
